[project]
name = "tinybench"
description = "tinybench"
version = "0.0.1"
readme = "README.md"

authors = [
    { name="Michael Lamertz", email="michael.lamertz@gmail.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    "pygame-ce",
    "pgcooldown",
    "ddframework @ git+https://github.com/dickerdackel/ddframework",
]

[project.urls]
homepage = "https://github.com/dickerdackel/tinybench"
bugtracker = "https://github.com/DickerDackel/tinybench/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
